--- a/main.html
+++ b/main.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Car Insurance Registration Form</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <h1>Car Insurance Registration Form</h1>
+
+  <form action="https://example.com/car-insurance/register" method="post">
+
+    <!-- Name -->
+    <label for="name">Name:</label>
+    <input type="text" name="name" id="name" required>
+
+    <!-- Email -->
+    <label for="email">Email:</label>
+    <input type="email" name="email" id="email" required>
+
+    <!-- Gender -->
+    <label for="gender">Gender:</label>
+    <input type="radio" name="gender" id="gender-male" value="male" required>
+    <label for="gender-male">Male</label>
+    <input type="radio" name="gender" id="gender-female" value="female" required>
+    <label for="gender-female">Female</label>
+
+    <!-- Car Brands -->
+    <label for="cars">Car Brand:</label>
+    <select name="cars" id="cars">
+      <option value="">Please select a car brand</option>
+      <option value="BMW">BMW</option>
+      <option value="Audi">Audi</option>
+      <option value="Mercedes">Mercedes</option>
+    </select>
+
+    <!-- Car Age -->
+    <label for="carage">Car Age:</label>
+    <input type="number" name="carage" id="carage" required>
+
+    <!-- Date of Purchase -->
+    <label for="dop">Date of Purchase:</label>
+    <input type="date" name="dop" id="dop" required>
+
+    <!-- Password -->
+    <label for="password">Password:</label>
+    <input type="password" name="password" id="password" required>
+
+    <!-- Submit Button -->
+    <button type="submit">Submit</button>
+
+  </form>
 
 </body>
-
 </html>
